# -meta-openenv-student-deadline-env

./: .gitignore  Dockerfile  GEMINI.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_grader.py  test_tasks.py
assignment_deadline_env/: Dockerfile  README.md  __init__.py  env.py  grader.py  inference.py  models.py  openenv.yaml  requirements.txt  tasks.py
server/: app.py
server/static/: app.js  index.html  styles.css
